[package]
name = "supno"
version = "0.1.0"
edition = "2021"

[dependencies]
cool-rust-input = { git = "https://github.com/ingobeans/cool-rust-input.git", version = "0.1.0" }
crossterm = "0.28.1"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tokio = { version = "1.41.0", features = ["full"] }
