[package]
name = "supno"
version = "4.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
cool-rust-input = { git = "https://github.com/ingobeans/cool-rust-input.git" }
crossterm = "0.28.1"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tokio = { version = "1.41.0", features = ["full"] }
